Bug Fixes
Fixed error with Restart function not showing Questions. Just answers. 
Also fixed transparency issue with Images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,43 +27,40 @@ h3 {
 
 img {
     padding: 10px;
-    width: 20%;
+    width: 250px;
     height: auto;
 }
 
 .infoBox {
     font-family: 'Cormorant Garamond', serif;
     padding: 30px;
-    background-color: black;
     color: white;
     width: 50%;
     height: auto;
-    opacity: 0.9;
+    background: rgba(0, 0, 0, .5);
     font-size: 24px;
 }
 
 #question {
     font-family: 'Cormorant Garamond', serif;
     padding: 30px;
-    background-color: black;
     color: white;
     width: 50%;
     height: auto;
-    opacity: 0.9;
+    background: rgba(0, 0, 0, .5);
     font-size: 24px;
 }
 
 .answerHolder {
     font-family: 'Cormorant Garamond', serif;
     padding: 30px;
-    background-color: black;
     color: white;
     width: 50%;
     height: auto;
-    opacity: 0.9;
+    background: rgba(0, 0, 0, .5);
     font-size: 24px;
 }
 
 .answerchoice:hover {
     color: #FCCE00;
-  }
+}
